# Ciallang

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  compile_commands.json
clangd/: config.yaml
cmake/: depend.cmake
doc/: tjs_grammar.txt  vm_opcodes.txt  与TJS官方差异.md  表达式和运算符.txt
src/: main.cpp  pch.h
src/ast/: Ast.cpp  Ast.hpp  AstFormatter.cpp  AstFormatter.hpp  AstNode.hpp  DeclNode.hpp  ExprNode.hpp  StmtNode.hpp
src/collections/: ConservativeVector.hpp
src/common/: Bytes.hpp  Colorizer.cpp  Colorizer.hpp  ConstExpr.hpp  Defer.hpp  Result.hpp  ResultMessage.hpp  SourceFile.cpp  SourceFile.hpp  SourceLocation.cpp  SourceLocation.hpp  TableFormatter.hpp  UTF8.cpp  UTF8.hpp
src/compiler/: Compiler.cpp  Compiler.hpp
src/core/: print.hpp
src/gc/: GC.hpp  Generational.cpp  Generational.hpp  MarkSweep.cpp  MarkSweep.hpp
src/init/: GlogInit.hpp
src/lexer/: IEEETypes.hpp  Lexer.cpp  Lexer.hpp  Token.hpp
src/parser/: Parser.cpp  Parser.hpp
src/types/: TjsFunction.cpp  TjsFunction.hpp  TjsNativeFunction.hpp  TjsObject.cpp  TjsObject.hpp  TjsOctet.cpp  TjsOctet.hpp  TjsString.cpp  TjsString.hpp  TjsTypes.hpp  TjsValue.cpp  TjsValue.hpp
src/vm/: Chunk.cpp  Chunk.hpp  CiallangState.hpp  CiallangVM.cpp  CiallangVM.hpp  DataPool.hpp  Instruction.cpp  Instruction.hpp  Interpreter.cpp  Interpreter.hpp  Label.hpp  Memory.hpp  Register.hpp  Rlc.cpp  Rlc.hpp  VMChunk.cpp  VMChunk.hpp  VMTypes.cpp  VMTypes.hpp
tests/: CMakeLists.txt  gc_test.cpp  gtest_cfg.cpp  interpreter_test.cpp  table_formatter_test.cpp
tests/cmake/: depend.cmake
tests/vm/: instruction_test.cpp
